--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+**/src/main/**/constants.kt
 ### STS ###
 .apt_generated
 .classpath
