--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/src/main/**/constants.kt
+docker-compose.yaml
+
 ### STS ###
 .apt_generated
 .classpath
